src/rust-movegen_original/build_log.txt
cargo :     Checking rust-movegen v0.1.0 
(C:\Users\mrcm_\Local\proj\ajedrez\movegen\rust-movegen)
En línea: 1 Carácter: 1
+ cargo check 2>&1 | Out-File -Encoding utf8 build_log.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking ru...n 
   \rust-movegen):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0603]: struct import `Move` is private
  --> src\lib.rs:9:12
   |
 9 | use board::Move; // Assuming Move is still needed from board
   |            ^^^^ private struct import
   |
note: the struct import `Move` is defined here...
  --> src\board.rs:1:5
   |
 1 | use crate::types::*;
   |     ^^^^^^^^^^^^^^^
note: ...and refers to the struct `Move` which is defined here
  --> src\types.rs:86:1
   |
86 | pub struct Move {
   | ^^^^^^^^^^^^^^^ you could import this directly
help: import `Move` directly
   |
 9 - use board::Move; // Assuming Move is still needed from board
 9 + use types::Move; // Assuming Move is still needed from board
   |

warning: unnecessary parentheses around `if` condition
   --> src\board.rs:114:12
    |
114 |         if (self.pin_direction[(self.stm << 7) | (from as 
usize)] != 0) {
    |            ^                                               
           ^
    |
    = note: `#[warn(unused_parens)]` (part of `#[warn(unused)]`) 
on by default
help: remove these parentheses
    |
114 -         if (self.pin_direction[(self.stm << 7) | (from as 
usize)] != 0) {
114 +         if self.pin_direction[(self.stm << 7) | (from as 
usize)] != 0  {
    |

warning: unnecessary parentheses around `if` condition
   --> src\board.rs:180:24
    |
180 |                     if (self.attacks[(opp_color << 7) | 
(to as usize)] == 0) {
    |                        ^                                   
                ^
    |
help: remove these parentheses
    |
180 -                     if (self.attacks[(opp_color << 7) | 
(to as usize)] == 0) {
180 +                     if self.attacks[(opp_color << 7) | (to 
as usize)] == 0  {
    |

warning: unnecessary parentheses around `if` condition
   --> src\board.rs:204:28
    |
204 |                         if (pindir == 0 || (pindir as 
i32).abs() == 16) {
    |                            ^                               
           ^
    |
help: remove these parentheses
    |
204 -                         if (pindir == 0 || (pindir as 
i32).abs() == 16) {
204 +                         if pindir == 0 || (pindir as 
i32).abs() == 16  {
    |

warning: unnecessary parentheses around `if` condition
   --> src\board.rs:214:36
    |
214 | ...                   if (pindir == 0 || (pindir as 
i32).abs() == 16) {
    |                          ^                                 
         ^
    |
help: remove these parentheses
    |
214 -                                 if (pindir == 0 || (pindir 
as i32).abs() == 16) {
214 +                                 if pindir == 0 || (pindir 
as i32).abs() == 16  {
    |

warning: unnecessary parentheses around `if` condition
   --> src\board.rs:228:36
    |
228 | ...                   if (pindir == 0 || (pindir as 
i32).abs() == off.abs()) {
    |                          ^                                 
                ^
    |
help: remove these parentheses
    |
228 -                                 if (pindir == 0 || (pindir 
as i32).abs() == off.abs()) {
228 +                                 if pindir == 0 || (pindir 
as i32).abs() == off.abs()  {
    |

warning: unnecessary parentheses around assigned value
   --> src\board.rs:412:49
    |
412 | ...                   let mut r = (sq as i32);
    |                                   ^         ^
    |
help: remove these parentheses
    |
412 -                                     let mut r = (sq as 
i32);
412 +                                     let mut r = sq as i32 ;
    |

warning: unused import: `types::*`
  --> src\lib.rs:10:5
   |
10 | use types::*;
   |     ^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) 
on by default

error[E0308]: mismatched types
   --> src\board.rs:127:72
    |
127 |         if (self.checking_squares[(self.stm << 7) | (from 
as usize)] & MASK_DISCOVER_CHECK) != 0 {
    |                                                            
            ^^^^^^^^^^^^^^^^^^^ expected `u8`, found `u16`

error[E0277]: no implementation for `u8 & u16`
   --> src\board.rs:127:70
    |
127 |         if (self.checking_squares[(self.stm << 7) | (from 
as usize)] & MASK_DISCOVER_CHECK) != 0 {
    |                                                            
          ^ no implementation for `u8 & u16`
    |
    = help: the trait `BitAnd<u16>` is not implemented for `u8`
help: the following other types implement trait `BitAnd<Rhs>`
   --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library\co
re\src\ops\bit.rs:174:8
    |
    = note: `u8` implements `BitAnd`
   ::: /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library\co
re\src\ops\bit.rs:187:0
    |
    = note: in this macro invocation
   --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library\co
re\src\internal_macros.rs:22:8
    |
    = note: `&u8` implements `BitAnd<u8>`
   ::: /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library\co
re\src\internal_macros.rs:33:8
    |
    = note: `u8` implements `BitAnd<&u8>`
   ::: /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library\co
re\src\internal_macros.rs:44:8
    |
    = note: `&u8` implements `BitAnd`
    = note: this error originates in the macro `bitand_impl` (in 
Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
   --> src\board.rs:456:18
    |
456 |             c50: self.counter50 as u8,
    |                  ^^^^^^^^^^^^^^^^^^^^ expected `u32`, 
found `u8`

error[E0308]: mismatched types
   --> src\bitboard_board.rs:288:26
    |
288 |             if (to_bit & (RANK_1 | RANK_8)) != 0 {
    |                          ^^^^^^^^^^^^^^^^^ expected `u64`, 
found `i32`

error[E0277]: no implementation for `u64 & i32`
   --> src\bitboard_board.rs:288:24
    |
288 |             if (to_bit & (RANK_1 | RANK_8)) != 0 {
    |                        ^ no implementation for `u64 & i32`
    |
    = help: the trait `BitAnd<i32>` is not implemented for `u64`
help: the following other types implement trait `BitAnd<Rhs>`
   --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library\co
re\src\ops\bit.rs:174:8
    |
    = note: `u64` implements `BitAnd`
   ::: /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library\co
re\src\ops\bit.rs:187:0
    |
    = note: in this macro invocation
   --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library\co
re\src\internal_macros.rs:22:8
    |
    = note: `&u64` implements `BitAnd<u64>`
   ::: /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library\co
re\src\internal_macros.rs:33:8
    |
    = note: `u64` implements `BitAnd<&u64>`
   ::: /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library\co
re\src\internal_macros.rs:44:8
    |
    = note: `&u64` implements `BitAnd`
    = note: this error originates in the macro `bitand_impl` (in 
Nightly builds, run with -Z macro-backtrace for more info)

warning: variable does not need to be mutable
   --> src\board.rs:238:16
    |
238 |            let mut count = 0;
    |                ----^^^^^
    |                |
    |                help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on 
by default

warning: unused variable: `count`
   --> src\board.rs:238:16
    |
238 |            let mut count = 0;
    |                ^^^^^^^^^ help: if this is intentional, 
prefix it with an underscore: `_count`
    |
    = note: `#[warn(unused_variables)]` (part of 
`#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src\board.rs:402:29
    |
402 |                         let mut check_line = false;
    |                             ----^^^^^^^^^^
    |                             |
    |                             help: remove this `mut`

warning: unused variable: `sign`
   --> src\board.rs:363:25
    |
363 |                     let sign = if who == WHITE { 1 } else 
{ -1 };
    |                         ^^^^ help: if this is intentional, 
prefix it with an underscore: `_sign`

warning: unused variable: `check_line`
   --> src\board.rs:402:29
    |
402 |                         let mut check_line = false;
    |                             ^^^^^^^^^^^^^^ help: if this 
is intentional, prefix it with an underscore: `_check_line`

warning: variable does not need to be mutable
   --> src\bitboard_board.rs:166:13
    |
166 |         let mut pawns = self.pieces[side][PAWN as usize];
    |             ----^^^^^
    |             |
    |             help: remove this `mut`

warning: unused variable: `from`
   --> src\bitboard_board.rs:245:17
    |
245 |             let from = (to as i32) - (8 * offset.signum() 
* offset.abs() / 8); 
    |                 ^^^^ help: if this is intentional, prefix 
it with an underscore: `_from`

warning: unused variable: `from`
   --> src\bitboard_board.rs:247:17
    |
247 |             let from = (to as i32) - (if offset.abs() > 8 
{ offset } else { offset * 8 });
    |                 ^^^^ help: if this is intentional, prefix 
it with an underscore: `_from`

warning: variable does not need to be mutable
   --> src\bitboard_board.rs:551:9
    |
551 |     let mut bb2 = bb | attacks;
    |         ----^^^
    |         |
    |         help: remove this `mut`

Some errors have detailed explanations: E0277, E0308, E0603.
For more information about an error, try `rustc --explain E0277`.
warning: `rust-movegen` (lib) generated 16 warnings
error: could not compile `rust-movegen` (lib) due to 6 previous 
errors; 16 warnings emitted
